# Todo

./: Dockerfile  docker-compose.yaml  pyproject.toml
.github/workflows/: actions.yaml  build_and_push.yaml
deploy/: .env  docker-compose.yaml
src/core/: admin.py  models.py  serializers.py  urls.py
src/core/migrations/: 0001_initial.py
src/todolist/: settings.py
