[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["whitez0r <i_mungalov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
django-environ = "^0.10.0"
psycopg2-binary = "^2.9.6"
environ = "^1.0"
social-auth-app-django = "^5.2.0"
djangorestframework = "^3.14.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.0"
ansible-vault-win = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tools.isort]
py_vertion = 310
profile = 'django'
line_length = 120
multi_line_output = 2
known_first_party = ["todolist", "core"]

[tool.flake8]
max-line-lenght = 120
per-file-ignores = """
    */migrations/*: E501
"""
